2012-10-05  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/diagMatrix.R (.sparseDiagonal): new 'unitri' argument;
	more flexibility; new: solve(<dsCMatrix>, <missing>)

2012-09-01  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/sparseVector.R (sparseVector): new constructor

	* inst/test-tools-Matrix.R (rspMat): smarter; also useful for large
	dimensions.


2012-07-23  Martin Maechler  <maechler@stat.math.ethz.ch>

	* tests/group-methods.R: now do much more testing, notably <Ops> of
	pairs of matrices ... however only when 'doExtras' is true, which
	it is not by default, e.g., on CRAN.

2012-07-21  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Ops.R, R/diagMatrix.R: many fixes, notably for rare operations
	that were not triggered before.

	* R/Auxiliaries.R (allTrueMat): new utility.

2012-07-20  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/dsparseMatrix.R, R/sparseVector.R, ...: Newly defined
	is.finite() and is.infinite() methods for all our *Matrix and *sparseVector.

2012-07-14  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/d??Matrix.R (diag<-): many "diag<-" methods, which preserve
	symmetricity, triangularity (even uni-triangularity sometimes);
	Partly by also making   A[cbind(i,i)]  preserve such properties.

	* src/Mutils.c (SET_packed_setDiag) {and similar}:
	*_setDiag() C functions implementing "diag<-" R methods.

2012-06-30  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Ops.R (Ops.x.x): now, dense symmetric and triangular matrices
	are preserved for many arithmetic and logic binary operators.

	* src/ldense.c (lsyMatrix_as_lspMatrix, ..): more coercions keep
	the dimnames().

	* R/symmetricMatrix.R (pack, unpack): new pack() {"inverse" of
	unpack(), including pack(<matrix>)}; new unpack() methods.

2012-06-20  Douglas Bates <bates@stat.wisc.edu>

	* src/scripts/DEPS.mkf,	...
	* src/*.c: Update to version 4.0.0 of SuiteSparse

2012-06-19  Martin Maechler  <maechler@stat.math.ethz.ch>
