@@ -1,6 +1,6 @@
 Package: Matrix
 Version: 1.0-10
-Date: 2012-10-05
+Date: 2012-10-15
 Priority: recommended
 Title: Sparse and Dense Matrix Classes and Methods
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
